<resources>
    <string name="title_activity_test">test</string>
    <string name="app_name">CSE110_Project</string>

    // General buttons
    <string name="routesButton">Routes</string>
    <string name="homeButton">Home</string>
    <string name="teamButton">Team</string>
    <string name="mockingButton">DEV</string>
    <string name="startWalkButton">Start Walk</string>
    <string name="stopWalkButton">Stop Walk</string>
    <string name="cancelButton">CANCEL</string>
    <string name="saveButton">Save</string>
    <string name="submitButton">Submit</string>
    <string name="backButton">Back</string>
    <string name="acceptButton">Accept</string>
    <string name="declineButton">Decline</string>

    // General text
    <string name="favText">FAV</string>
    <string name="stepsText">Steps</string>
    <string name="milesText">Miles</string>
    <string name="emptyText"> </string>
    <string name="noDataText">N/A</string>
    <string name="defaultSteps">0</string>
    <string name="defaultMiles">0.0</string>
    <string name="defaultTime">00:00</string>

    // Home screen
    <string name="homeHeader">Walk Walk Revolution</string>
    <string name="homeTeamText">Team updates:</string>
    <string name="dailyDataText">Today, you walked…</string>
    <string name="recentWalkText">Your most recent walk was…</string>
    <string name="recentTimeText">Time:</string>

    // Email dialog
    <string name="emailPrompt">Please enter your preferred Gmail address</string>
    <string name="emailHint">Gmail address</string>
    <string name="invalidEmail">Invalid email. Please try again</string>

    // Height dialog
    <string name="heightHintDialog">Height</string>
    <string name="heightButton">OK</string>
    <string name="heightPrompt">Please enter your height in inches (e.g. 60):</string>
    <string name="heightExplanation">
        Your height will be used to calculate the distance you travel from your steps. Thank you
        for choosing Walk Walk Revolution.
    </string>
    <string name="invalidHeightToast">Invalid height. Please try again</string>
    <string name="longHeightError">Height must have no more than 2 digits</string>
    <string name="invalidHeightError">Height must be a whole number</string>
    <string name="nonPositiveHeightError">Height must be a positive number</string>
    <string name="invalidScheduledWalkToast">No walk scheduled.</string>

    // Routes screen
    <string name="newRouteButton">+</string>
    <string name="routesTeamButton">Team Routes</string>
    <string name="userRoutesHeader">Your Routes</string>

    // Team Routes Screen
    <string name="backToYourRoutes">Your Routes</string>
    <string name="teamRoutesTitleButton">Team Routes</string>

    //walked or not
    <string name="routeWalked">Walked</string>
    // Walk screen
    <string name="walkHeader">Walk</string>
    <string name="walkDefaultName">New Route</string>
    <string name="walkDefaultStartingPoint"> </string>
    <string name="walkDefaultNotes"> </string>
    <string name="verifyCancelPrompt">Are you sure you want to cancel?</string>
    <string name="verifySavePrompt">Would you like to save your walk?</string>
    <string name="canceledToast">Canceled</string>

    // Save route dialog
    <string name="routeNamePrompt">Enter the name of this route</string>
    <string name="routeNameHint">Route name</string>
    <string name="emptyRouteName">Please enter a route name</string>
    <string name="invalidRouteNameError">Invalid route name</string>
    <string name="startingPointPrompt">Enter the starting point (optional)</string>
    <string name="startingPointHint">Starting point</string>
    <string name="featureSelectPrompt">Select route features (optional)</string>
    <string name="featureFlat">Flat</string>
    <string name="featureHilly">Hilly</string>
    <string name="featureLoop">Loop</string>
    <string name="featureOutBack">Out-and-Back</string>
    <string name="featureStreets">Streets</string>
    <string name="featureTrail">Trail</string>
    <string name="featureEvenSurface">Even Surface</string>
    <string name="featureUnevenSurface">Uneven Surface</string>
    <string name="difficultyMid">Moderate</string>
    <string name="difficultyEasy">Easy</string>
    <string name="difficultyHard">Difficult</string>
    <string name="routeNotesPrompt">Enter notes for this route (optional)</string>
    <string name="routeNotesHint">Notes for this route</string>

    // Mocking screen
    <string name="mockingStepsPrompt">Tap to add steps</string>
    <string name="mockingStepsButton">+500</string>
    <string name="mockingTimePrompt">Enter the current time</string>
    <string name="mockingTimeHint">00:00</string>
    <string name="mockingTimeError">Invalid time format. Please try again</string>
    <string name="mockingTimeSuccess">Saved</string>

    // Route details Screen
    <string name="detailsHeader">Details</string>
    <string name="detailsDefaultName">Route Name</string>
    <string name="detailsStartDateText">Last walked: </string>
    <string name="detailsStartingPointText">Starting point: </string>
    <string name="detailsDifficultyText">Difficulty: </string>
    <string name="detailsTerrainText">Terrain: </string>
    <string name="detailsNotes">Notes: </string>

    //Add team member
    <string name="AddMemberNickNamePrompt">Enter the member name (required)</string>
    <string name="AddMemberEmailPrompt">Enter the member email (required)</string>
    <string name="sendInvite">Send Invite</string>
    <string name="InvalidInvite">Please fill all required fields</string>
    <string name="inviteExistingMemberError">This user is already on your team</string>
    <string name="NickName">Nickname</string>

    //Scheduled Route Details
    <string name="scheduledWalkProposed">Proposed</string>
    <string name="scheduledWalkScheduled">Scheduled</string>
    <string name="scheduledDate">Scheduled: date/time</string>
    <string name="schedDateTimeText">Scheduled on: </string>
    <string name="acceptedText">accepted : </string>
    <string name="ScheduleWalkText">Schedule</string>
    <string name="WithdrawWalkText">Withdraw</string>
    <string name="declinedTextBadTime">Bad Time: </string>
    <string name="declinedTextBadRoute">Bad Route: </string>
    <string name="noResponse">No Response: </string>

    // ???
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="channel_name">WWR_notification_channel</string>
    <string name="channel_description">Notification channel for WalkWalkRevolution</string>


</resources>