...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <Button
        android:id="@+id/button2"
        android:layout_width="74dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
...
