...
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <Button
        android:id="@+id/walkCancelButton"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/cancelButton"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
